discussion/kv_engine/144616/144616_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43815: Hold vb stateLock while dropping prepare from DM

The durability monitor is guarded by the vb stateLock, ensure it is
locked (read/shared) when removing a prepare from the DM while dropping
a collection. This prevents a state change replacing the DM (e.g., a
passive DM with an active DM) while it is in use.

Dropping prepares from the DM is expected to be infrequent, and the
number of prepares in flight at any one time does have a practical
upper bound, so the impact of acquiring the stateLock for each dropped
prepare should be minimal.

Change-Id: I5f50c49e97e992e715ac6c2cc7463fee5a3da5fe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-01-28 13:18:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-28 13:46:15.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6790/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_bucket.cc:1160:52: error: use of undeclared identifier "getStateLock" [clang-diagnostic-error]
        folly::SharedMutex::ReadHolder vbStateLock(getStateLock());
                                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6790/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_bucket.cc:1160:52:
error: use of undeclared identifier "getStateLock" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33225/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_bucket.cc(1160): error C3861: "getStateLock": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33225/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28587/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_bucket.cc:1160:52:
error: use of undeclared identifier "getStateLock"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28587/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7411/ : FAILURE

Compile error at [2021-01-28T13:22:10.047Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1160:52:
error: use of undeclared identifier "getStateLock"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7411/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8325/ : FAILURE

Compile error at [2021-01-28T13:31:30.874Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1160:52:
error: ?getStateLock? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8325/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8710/ : FAILURE

Compile error at [2021-01-28T13:37:27.039Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1160:52:
error: use of undeclared identifier "getStateLock"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8710/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8453/ : FAILURE

Compile error at [2021-01-28T13:31:05.975Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1160:52:
error: ?getStateLock? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8453/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16259/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5326/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
